bugfix: focus outline was behind next element

--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -49,6 +49,7 @@ button
 *:focus
   outline: rgba(map-get($text-color, 'fg'), $focus-outline-opacity) dashed $focus-outline-width
   outline-offset: $unit / 2
+  position: relative
   transition: all $color-transition-delay ease
 
 input,
